--- a/index.html
+++ b/index.html
@@ -126,7 +126,98 @@
             create() {
                 this.cameras.main.fadeIn(3000);
 
-                this.add.text(10,10,"Loading Scene");
+                const multiText = this.add.text(225,550,"The sun never sets on the rat empire\n  We are small, but we are legion");
+                multiText.setTint(0xff0000);
+
+                let cheese = this.add.image(400, 125, 'cheese');
+                cheese.setScale(0.5);
+
+                let rat1 = this.add.image(75, 200, 'ratminion');
+                let rat2 = this.add.image(220, 280, 'ratminion');
+                let rat3 = this.add.image(80, 360, 'ratminion');
+                let rat4 = this.add.image(225, 400, 'ratminion');
+                let rat5 = this.add.image(75, 500, 'ratminion');
+                let rat6 = this.add.image(725, 200, 'ratminion');
+                let rat7 = this.add.image(580, 280, 'ratminion');
+                let rat8 = this.add.image(720, 360, 'ratminion');
+                let rat9 = this.add.image(575, 400, 'ratminion');
+                let rat10 = this.add.image(725, 500, 'ratminion');
+                rat1.setScale(0.35);
+                rat2.setScale(0.35);
+                rat3.setScale(0.35);
+                rat4.setScale(0.35);
+                rat5.setScale(0.35);
+                rat6.setScale(0.35);
+                rat7.setScale(0.35);
+                rat8.setScale(0.35);
+                rat9.setScale(0.35);
+                rat10.setScale(0.35);
+                rat1.setFlip(180, this.y);
+                rat2.setFlip(180, this.y);
+                rat3.setFlip(180, this.y);
+                rat4.setFlip(180, this.y);
+                rat5.setFlip(180, this.y);
+                
+
+                this.time.delayedCall(1000 * 0, () => {
+                    this.tweens.add({
+                        targets: cheese,
+                        scaleX: 0.75,
+                        scaleY: 0.75,
+                        duration: 2000
+                    });
+                });
+
+                this.time.delayedCall(1000 * 2, () => {
+                    this.tweens.add({
+                        targets: cheese,
+                        scaleX: 0.5,
+                        scaleY: 0.5,
+                        duration: 2000
+                    });
+                });
+
+                this.time.delayedCall(1000 * 4, () => {
+                    this.tweens.add({
+                        targets: cheese,
+                        scaleX: 0.75,
+                        scaleY: 0.75,
+                        duration: 2000
+                    });
+                });
+
+                this.time.delayedCall(1000 * 6, () => {
+                    this.tweens.add({
+                        targets: cheese,
+                        scaleX: 0.5,
+                        scaleY: 0.5,
+                        duration: 2000
+                    });
+                });
+
+                this.time.delayedCall(1000 * 8, () => {
+                    this.tweens.add({
+                        targets: cheese,
+                        scaleX: 0.75,
+                        scaleY: 0.75,
+                        duration: 2000
+                    });
+                });
+
+                this.time.delayedCall(1000 * 2, () => {
+                    this.add.circle(200, 560, 5, 0x000000);
+                    this.add.circle(590, 560, 5, 0x000000);
+                });
+
+                this.time.delayedCall(1000 * 4, () => {
+                    this.add.circle(180, 560, 5, 0x000000);
+                    this.add.circle(610, 560, 5, 0x000000);
+                });
+
+                this.time.delayedCall(1000 * 6, () => {
+                    this.add.circle(160, 560, 5, 0x000000);
+                    this.add.circle(630, 560, 5, 0x000000);
+                });
 
                 const FKey = this.input.keyboard.addKey('F');
 
@@ -144,7 +235,11 @@
 
                 }, this);
 
-                this.time.delayedCall(1000 * 5, () => {
+                this.time.delayedCall(1000 * 7, () => {
+                    this.cameras.main.fadeOut(3000);
+                });
+
+                this.time.delayedCall(1000 * 10, () => {
                     this.scene.start('mainMenu');
                 });
             }
@@ -195,7 +290,8 @@
                 height: 600
             },
             backgroundColor: '#ffffff',
-            scene: [ Logo, loadScreen, mainMenu ]
+            //scene: [ Logo, loadScreen, mainMenu ]
+            scene: [loadScreen]
         };
 
         const game = new Phaser.Game(config);
